--- a/haverkamp.html
+++ b/haverkamp.html
@@ -425,7 +425,7 @@
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      سمك الحماية 9 ميكروميلى
+                      سمك الحماية 9.5 ميكروميلى
                     </div>
                   </div>
                 </div>
@@ -495,7 +495,7 @@
                   <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      نعم يوجد سيرفس دوري لفحص الحماية كل 6 اشهور مجانا
+                      نعم يوجد سيرفس دوري لفحص الحماية كل 6 اشهر مجانا
                     </div>
                   </div>
                 </div>
