--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
-  <title>هافركامب | افضل حماية سيارات بالكويت </title>
+  <title>هافركامب | افضل شركة حماية سيارات بالكويت </title>
   <meta name="robots" content="index, follow">
+  <!-- microsoft Bing Webmaster -->
   <meta name="msvalidate.01" content="6198358A4D794604238ACB9F4AEF9BFA" />
   <meta name="description"
-    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+    content=" هافركامب افضل شركة حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta name="author" content="Ahmad M-Nofal">
   <meta name="google-site-verification" content="v1zCZEudrFcnkNAoZQkylYj93y68FhZteCOy4YvUnbY" />
   <!-- Google tag (gtag.js) -->
@@ -26,13 +27,12 @@
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
   <meta property="og:title"
-    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+    content=" هافركامب افضل شركة حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta property="og:description"
-    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+    content=" هافركامب افضل شركة حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
   <meta property="og:url" content="https://haverkampkw.com" />
   <meta property="og:site_name" content="هافركامب">
-  <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/">
   <!-- Schema.org JSON-LD -->
 
@@ -47,7 +47,8 @@
           "url": "https://haverkampkw.com/",
           "logo": "https://haverkampkw.com/img/main_page/haverkamp.webp",
           "image": "https://haverkampkw.com/img/contact/cover.jpeg",
-          "description": "هافركامب الكويت - مركز متخصص في حماية السيارات والعزل الحراري والنانو سيراميك بأعلى جودة ألمانية مع ضمان معتمد.",
+          "description":
+           "هافركامب افضل شركة حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش",
           "telephone": "+965651111154",
           "priceRange": "$$",
           "address": {
@@ -59,8 +60,8 @@
           },
           "geo": {
             "@type": "GeoCoordinates",
-            "latitude": 29.30775020210312,
-            "longitude": 47.939808414371264
+            "latitude": 29.307435053926305,
+            "longitude": 47.939898967502984
           },
           "openingHoursSpecification": [
             {
@@ -91,7 +92,7 @@
                   "@type": "Service",
                   "name": "حماية سيارات",
                   "url": "https://haverkampkw.com/protication.html",
-                  "description": "أقوى حماية سيارات بالكويت | حماية فل بدي كفالة 10 سنوات بأسعار تبدأ من 400 دينار."
+                  "description": "افضل حماية سيارات بالكويت | حماية فل بدي كفالة 10 سنوات بأسعار تبدأ من 400 دينار."
                 }
               },
               {
@@ -142,7 +143,6 @@
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
-  <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -162,7 +162,7 @@
   <!-- start header -->
   <header class="header">
     <a href="#">
-      <img class="logo" alt="albaraka logo" src="./img/main_page/logo.svg" />
+      <img class="logo" alt="هافركامب افضل شركة جماية سيارات بالكويت" src="./img/main_page/logo.svg" />
     </a>
 
     <nav class="main-nav">
@@ -172,7 +172,7 @@
         <li><a class="main-nav-link" href="#gallery"> معرض الصور</a></li>
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
         <li><a class="main-nav-link" href="./terms.html"> البنود والشروط</a></li>
-        <li><a class="main-nav-link" href="./contactus.html"> تواصل معنا</a></li>
+        <li><a class="main-nav-link nav-cta " href="./contactus.html"> تواصل معنا</a></li>
       </ul>
     </nav>
 
@@ -189,16 +189,15 @@
       <div class="hero">
         <div class="hero-text-box">
           <h1 class="heading-primary">
-            هافركامب افضل حماية سيارات بالكويت
+            هافركامب افضل شركة حماية سيارات بالكويت
           </h1>
           <p class="hero-description">
             الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط
+            <br>
             الوكيل الحصري لحماية كلايف ديزاين الكورية بالكويت
             <br>
             <br>
-            مليت من الشركات اللي تجص عليك وتركب ليك حماية سيئة وتقول لك انها
-            حماية ممتازة؟
-            حياك وراح تشوف الفرق بنفسك
+            الاهتمام يصنع الفارق . . حمايتنا استثمار حقيقي
             <br>
             <br>
             نقدم لكم أفضل حماية للسيارات
@@ -214,7 +213,7 @@
             <source srcset="./img/main_page/haverkamp.png" type="image/png" />
 
             <img src="./img/main_page/haverkamp.png" class="hero-img"
-              alt="Woman enjoying food, meals in storage container, and food bowls on a table" />
+              alt="هافركامب افضل شركة حماية سيارات بالكويت حماية المانية كفالة 10 سنوات " />
           </picture>
         </div>
       </div>
@@ -230,17 +229,17 @@
       <div class="container">
         <div class="box">
           <i class="fa-solid fa-chart-line fa-2x fa-fw"></i>
-          <span class="number" data-goal="14">15</span>
+          <span class="number" data-goal="14">15+</span>
           <span class="text">خبرة</span>
         </div>
         <div class="box">
           <i class="fa-solid fa-people-group fa-2x fa-fw"></i>
-          <span class="number" data-goal="8500">6,500</span>
+          <span class="number" data-goal="8500">17,879</span>
           <span class="text">عميل</span>
         </div>
         <div class="box">
           <i class="fa-solid fa-car fa-2x fa-fw"></i>
-          <span class="number" data-goal="10000">10,000</span>
+          <span class="number" data-goal="10000">22,000</span>
           <span class="text">سيارة</span>
         </div>
       </div>
@@ -256,50 +255,53 @@
       </div>
       <div class="container">
         <div class="services-box">
-          <img src="./img/main_page/protication1.png" alt="protication">
+          <img src="./img/main_page/protication1.png" alt="حماية بدي المانية - كورية - امريكية كفالة 10 سنوات">
           <div class="services-info">
             <a href="./protication.html" target="_blank">
-              <h3> حماية</h3>
+              <h3> حماية بدي</h3>
             </a>
           </div>
 
         </div>
         <div class="services-box">
-          <img src="./img/main_page/tint.png" alt="tint">
+          <img src="./img/main_page/tint.png" alt="عازل حراري  الماني - امريكي كفالة 5 سنوات">
           <div class="services-info">
-            <a href="./tint.html">
-              <h3> عازل</h3>
+            <a href="./tint.html" target="_blank">
+              <h3> عازل حراري</h3>
             </a>
           </div>
         </div>
         <div class="services-box">
-          <img src="./img/main_page/painting.jpg" alt="painting">
+          <img src="./img/main_page/painting.jpg" alt="صبغ سيارات و حدادة">
           <div class="services-info">
-            <a href="./paint.html">
+            <a href="./paint.html" target="_blank">
               <h3> صبغ</h3>
             </a>
           </div>
         </div>
         <div class="services-box">
-          <img src="./img/main_page/polishing.png" alt="polish">
+          <img src="./img/main_page/polishing.png" alt="بوليش وتلميع خارجي">
           <div class="services-info">
-            <a href="./polish.html">
+            <a href="./polish.html" target="_blank">
               <h3>بوليش </h3>
             </a>
           </div>
         </div>
+
         <div class="services-box">
-          <img src="./img/main_page/swarfsky.webp" alt="accessories">
+          <img src="./img/main_page/wash.png" alt="غسيل وتنظيف داخلي">
           <div class="services-info">
-            <a href="">
-              <h3> اكسسوارات</h3>
+            <a href="#" target="_blank">
+              <h3>غسيل </h3>
             </a>
           </div>
         </div>
         <div class="services-box">
-          <img src="./img/main_page/wash.png" alt="wash">
+          <img src="./img/main_page/swarfsky.webp" alt="اكسسوارات وعطور">
           <div class="services-info">
-            <h3>غسيل </h3>
+            <a href="#" target="_blank">
+              <h3> اكسسوارات</h3>
+            </a>
           </div>
         </div>
       </div>
@@ -313,7 +315,9 @@
           لماذا تختار هافركامب </h2>
       </div>
       <div class="container">
-        <div class="img"><img src="./img/main_page/haverkamp.png" alt=""></div>
+        <div class="img"><img src="./img/main_page/haverkamp.png"
+            alt="هافركامب افضل شركة حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش">
+        </div>
         <ul class="about-list">
           <li><i class="fa-solid fa-medal"></i> فنيون مدربون علي اعلي مستوي</li>
           <li>
@@ -337,22 +341,22 @@
       <div class="carosel">
         <div class=" list">
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-1.png" alt="football">
+            <img src="./img/gallery/main/ppf-gal-1.png" alt="حماية فل بدي المانية كفالة 10 سنوات">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-2.png" alt=" handball ">
+            <img src="./img/gallery/main/ppf-gal-2.png" alt=" حماية فل بدي كورية كفالة 10 سنوات ">
           </div>
           <div class="item">
-            <img src="../img/gallery/main/ppf-gal-3.png" alt="basketball">
+            <img src="../img/gallery/main/ppf-gal-3.png" alt="حماية فل بدي امريكية كفالة 10 سنوات">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-4.png" alt="volleyball">
+            <img src="./img/gallery/main/ppf-gal-4.png" alt="افضل شركة حمايةسيارات بالكويت">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-5.png" alt="tennis">
+            <img src="./img/gallery/main/ppf-gal-5.png" alt="افضل حماية فل بدي بالكويت">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-6.png" alt="swimming">
+            <img src="./img/gallery/main/ppf-gal-6.png" alt="افضل حماية للسيارات وعازل حراري بالكويت">
           </div>
 
         </div>
@@ -522,20 +526,24 @@
             <p class="cta-text">
               نقدم لكم أفضل حماية للسيارات باستخدام أحدث التقنيات والمواد عالية الجودة</p>
 
-            <form class="cta-form" name="sign-up" netlify>
+            <form class="cta-form" name="sign-up" action="https://formsubmit.co/ef7d656274c363dc9eb3ce5c5ff03525"
+              method="post">
+              <input type="hidden" name="_captcha" value="false">
               <div>
                 <label for="full-name">الاسم بالكامل </label>
-                <input id="full-name" type="text" placeholder=" من فضلك اكتب اسمك" name="full-name" required />
+                <input id="full-name" type="text" placeholder=" من فضلك اكتب اسمك" name="full-name" required
+                  autocomplete="given-name" />
               </div>
 
               <div>
                 <label for="email">البريد الالكتروني </label>
-                <input id="email" type="email" placeholder="من فضلك ادخل بريدك الالكتروني" name="email" required />
+                <input id="email" type="email" placeholder="من فضلك ادخل بريدك الالكتروني" name="email" required
+                  autocomplete="off" />
               </div>
 
               <div>
-                <label for="select-where">اترك رسالتك</label>
-                <textarea name="message" id="message" placeholder="اترك رسالتك هنا "></textarea>
+                <label for="message">اترك رسالتك</label>
+                <textarea name="message" id="message" placeholder="اترك رسالتك هنا " autocomplete="off"></textarea>
                 </select>
               </div>
 
@@ -576,7 +584,7 @@
               </ul>
         -->
         <p class="text"> الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط <br> الوكيل الحصري لحماية كلايف ديزاين
-          الكورية</p>
+          الكورية بالكويت</p>
 
       </div>
 
@@ -627,6 +635,6 @@
         </div> -->
   <!-- End Footer -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></scrip >
-      </body >
+</body >
 
 </html >
