--- a/tint.html
+++ b/tint.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
-  <title>haverkamp | هافركامب</title>
+  <title> هافركامب | افضل عازل حراي بالكويت عازل الماني - عازل امريكي كفالة 5 سنوات</title>
   <meta name="robots" content="index, follow">
-  <meta name="description" content="افضل واقوي حماية وعازل حراري بالكويت ، منتج الماني 
- ">
+  <meta name="description"
+    content=" شركة هافركامب توفر لكم مجموعة متنوعة من افلام العازل الحراري - عازل حراري الماني - عازل حراري امريكي كفالة 5 سنوات">
   <meta name="author" content="Ahmad M-Nofal">
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
   <meta property="og:title"
-    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+    content=" هافركامب توفر لكم محموعة متنوعة من افلام العازل الحراري عازل حراري الماني - عازل حراري امريكي - كفالة 5 سنوات  " />
   <meta property="og:description"
-    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+    content=" هافركامب توفر لكم محموعة متنوعة من افلام العازل الحراري عازل حراري الماني - عازل حراري امريكي - كفالة 5 سنوات  " />
   <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
   <meta property="og:url" content="https://haverkampkw.com" />
   <meta property="og:site_name" content="هافركامب">
@@ -63,7 +63,7 @@
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
         <li><a class="main-nav-link" href="#faq"> الاسئلةالشائعة</a></li>
         <li><a class="main-nav-link" href="./terms.html"> البنود والشروط</a></li>
-        <li><a class="main-nav-link" href="./contactus.html"> تواصل معنا</a></li>
+        <li><a class="main-nav-link nav-cta" href="./contactus.html"> تواصل معنا</a></li>
       </ul>
     </nav>
 
@@ -78,10 +78,13 @@
   <main>
     <section class="section-hero" id="section-hero">
       <div class="protication">
-        <img src="./img/tint/tint-land2.webp" alt="tint">
+        <img src="./img/tint/tint-land2.webp"
+          alt="هافركامب توفر لكم محموعة متنوعة من افلام العازل الحراري عازل حراري الماني - عازل حراري امريكي - كفالة 5 سنوات">
         <div class="container">
           <div class="protication-text">
-            <h1>مع عازل حراي من هافركامب خليك مميز
+            <h1>هافركامب توفر لعملائة الكرام مجموعة متنوعة من افلام العازل الحراري هافركامب الالماني - صن تك الامريكي -
+              رويال
+              شيلد الامريكي
             </h1>
           </div>
         </div>
@@ -94,8 +97,8 @@
       <div class="slider">
         <div class="container">
           <div class="slider-text">
-            <h2>تمتع بخصوصية وراحة بال مع افلام التضليل من هافركامب</h2>
-            <p>حقم تظليل سيارتك باستخدام أفلام هافركامب لنوافذ السيارات فهي تحمي من الحرارة وتوفر حماية تصل إلى 99% من
+            <h2>تمتع بخصوصية وراحة بال مع افلام العازل الحراري من هافركامب</h2>
+            <p>قم بتظليل سيارتك باستخدام أفلام هافركامب لنوافذ السيارات فهي تحمي من الحرارة وتوفر حماية تصل إلى 99% من
               الأشعة فوق
               البنفسجية خاصة في أشهر الصيف <br> حيث ترتفع درجة حرارة السيارات بشكل كبير تحت أشعة الشمس مما يؤدي إلى
               ارتفاع
@@ -103,8 +106,10 @@
               الحرارة بالإضافة إلى الخصوصية</p>
           </div>
           <div class="juxtapose">
-            <img src="./img/tint/hot.jpg" data-label="قبل تركيب العازل" alt="hot" />
-            <img src="./img/tint/could.jpg" data-label="بعد تركيب العازل" alt="could" />
+            <img src="./img/tint/hot.jpg" data-label="قبل تركيب العازل"
+              alt="تركيب عازل حراري افضل عازل حراري الماني شركة هافر كامب" />
+            <img src="./img/tint/could.jpg" data-label="بعد تركيب العازل"
+              alt="تركيب افضل عازل حراري الماني بالكويت شركة هافركامب" />
           </div>
         </div>
       </div>
@@ -164,10 +169,10 @@
       </div>
       <div class="container">
         <div class="box">
-          <img src="./img/tint/haverkamp.png" alt="haverkamp" />
+          <img src="./img/tint/haverkamp.png" alt="عازل هافركامب الالماني افضل عازل حراي بالكويت كفالة 5 سنوات" />
           <div class="content">
             <h3>هافركامب</h3>
-            <p>عازل الماني</p>
+            <p>الماني</p>
           </div>
           <!-- <div class="info">
             <a href="./haverppf.html">اعرف المزيد</a>
@@ -175,10 +180,10 @@
           </div> -->
         </div>
         <div class="box">
-          <img src="./img/tint/SUNTEK.jpg" alt="clif" />
+          <img src="./img/tint/SUNTEK.jpg" alt="عازل صن تك الامريكي افضل عازل امريكي بالكويت كفالة 5 سنوات" />
           <div class="content">
             <h3>صن تك</h3>
-            <p>عازل امريكي</p>
+            <p>امريكي</p>
           </div>
           <!-- <div class="info">
             <a href="#">اعرف المزيد</a>
@@ -186,10 +191,10 @@
           </div>-->
         </div>
         <div class="box">
-          <img src="./img/tint/aswf.jpeg" alt="HEXIS" />
+          <img src="./img/tint/aswf.jpeg" alt="حماية جام امريكية افضل حماية جام بالكويت كفالة سنة" />
           <div class="content">
             <h3>اية اس دابليو اف </h3>
-            <p>عازل امريكي</p>
+            <p>امريكي</p>
           </div>
           <!-- <div class="info">
             <a href="#">اعرف المزيد</a>
@@ -197,10 +202,10 @@
           </div> -->
         </div>
         <div class="box">
-          <img src="./img/tint/royal-shield.png" alt="iron shield" />
+          <img src="./img/tint/royal-shield.png" alt="عازل حراري رويال شيلد امريكي كفالة 5 سنوات " />
           <div class="content">
             <h3> رويال شيلد</h3>
-            <p>عازل امريكي</p>
+            <p>امريكي</p>
           </div>
           <!-- <div class="info">
             <a href="#">اعرف المزيد</a>
@@ -218,7 +223,8 @@
       </div>
       <div class="container">
         <div class="box">
-          <div class="img"><img src="./img/tint/wahag.webp" alt=""></div>
+          <div class="img"><img src="./img/tint/wahag.webp" alt="احمي نفسك من الاشعة الضارة مع عازل هافركامب الالماني">
+          </div>
           <div class="box-text">
             <h3>تقليل اكتساب الحرارة صيفًا</h3>
             <p>
@@ -227,7 +233,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/tint/air.avif" alt=""></div>
+          <div class="img"><img src="./img/tint/air.avif" alt="تقليل استهلاك الوقود بعد تركيب عازل هافركامب"></div>
           <div class="box-text">
             <h3>تقليل استهلاك الطاقة</h3>
             <p>
@@ -238,7 +244,8 @@
           </div>
         </div>
         <div class="box">
-          <div class="img"><img src="./img/tint/car-interior.jpg" alt=""></div>
+          <div class="img"><img src="./img/tint/car-interior.jpg"
+              alt="مع افلام العازل الحراري من هافر كامب احمي داخلية السيارة من الاشعة الضارة"></div>
           <div class="box-text">
             <h3>حجب الأشعة فوق البنفسجية</h3>
             <p>
@@ -248,7 +255,8 @@
           </div>
         </div>
         <div class="box">
-          <div class="img last"><img src="./img/tint/privacy.webp" alt=""></div>
+          <div class="img last"><img src="./img/tint/privacy.webp"
+              alt="مع افلام العازل الحراري من هافركامب تمتع بخصوصية وراحة بال"></div>
           <div class="box-text">
             <h3>خصوصية وراحة بال</h3>
             <p>
@@ -268,22 +276,22 @@
       <div class="carosel">
         <div class=" list">
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-1.jpg" alt="tint">
+            <img src="./img/gallery/tint/tint-gal-1.jpg" alt="تركيب عازل حراري هافركامب الماني كفالة 5 سنوات">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-2.jpg" alt=" tint ">
+            <img src="./img/gallery/tint/tint-gal-2.jpg" alt="تركيب عازل حراري صن تك امريكي  كفالة 5 سنوات">
           </div>
           <div class="item">
-            <img src="../img/gallery/tint/tint-gal-3.jpg" alt="tint">
+            <img src="../img/gallery/tint/tint-gal-3.jpg" alt="تركيب عازل حراري رويال شيلد امريكي امريكي كفالة 5 سنوات">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-4.jpg" alt="tint">
+            <img src="./img/gallery/tint/tint-gal-4.jpg" alt="تركيب هافركامب اقوي عازل حراري الماني كفالة 5 سنوات">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-5.jpg" alt="tint">
+            <img src="./img/gallery/tint/tint-gal-5.jpg" alt="تركيب صن تك اقوي عازل حراري امريكي كفالة 5 سنوات">
           </div>
           <div class="item">
-            <img src="./img/gallery/tint/tint-gal-6.jpg" alt="tint">
+            <img src="./img/gallery/tint/tint-gal-6.jpg" alt="تركيب رويال شيلد اقوي عازل حراري الماني كفالة 5 سنوات">
           </div>
 
         </div>
