--- a/protication.html
+++ b/protication.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
-  <title>هافركامب | افضل حماية سيارات بالكويت </title>
+  <title>هافركامب | افضل شركة حماية سيارات بالكويت توفر لكم مجموعة متنوعة من افلام الحماية هافركامب الالماني - كلايف
+    ديزاين الكورية - ايرون شيلد الامريكية </title>
   <meta name=”robots” content="index, follow">
   <meta name="description"
     content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta name="author" content="Ahmad M-Nofal">
-  <meta name="google-site-verification" content="v1zCZEudrFcnkNAoZQkylYj93y68FhZteCOy4YvUnbY" />
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
@@ -21,7 +21,6 @@
   <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
   <meta property="og:url" content="https://haverkampkw.com" />
   <meta property="og:site_name" content="هافركامب">
-  <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/">
   <!-- favicon -->
   <link rel="shortcut icon" href="./img/favicon_io/favicon.ico" type="image/x-icon">
@@ -29,7 +28,6 @@
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
-  <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +47,7 @@
   <!-- start header -->
   <header class="header">
     <a href="#">
-      <img class="logo" alt="albaraka logo" src="./img/main_page/logo.svg" />
+      <img class="logo" alt=" هافركامب افضل شركة جماية سيارات بالكويت" src="./img/main_page/logo.svg" />
     </a>
 
     <nav class="main-nav">
@@ -58,7 +56,7 @@
         <li><a class="main-nav-link" href="#gallery"> معرض الصور</a></li>
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
         <li><a class="main-nav-link" href="./terms.html"> البنود والشروط</a></li>
-        <li><a class="main-nav-link" href="./contactus.html"> تواصل معنا</a></li>
+        <li><a class="main-nav-link nav-cta" href="./contactus.html"> تواصل معنا</a></li>
       </ul>
     </nav>
 
@@ -73,10 +71,11 @@
   <main>
     <section class="section-hero" id="section-hero">
       <div class="protication">
-        <img src="./img/protication/protication.webp" alt="protication">
+        <img src="./img/protication/protication.webp"
+          alt="هافركامب اقوي حماية سيارات بالكويت حماية المانية - حماية كورية - حماية امريكية - عازل حراري الماني - عازل حراري امريكي ">
         <div class="container">
           <div class="protication-text">
-            <h1>مع حمايات هافركامب احمي سيارتك من طقات الحصي والصخر المتطاير على الطريق</h1>
+            <h1>مع حمايات هافركامب احمي سيارتك من ضربات الحصي والصخر المتطاير على الطريق</h1>
           </div>
         </div>
       </div>
@@ -89,13 +88,15 @@
         <div class="container">
           <div class="slider-text">
             <h2>تمتع براحة بال مع افلام الحماية من هافركامب </h2>
-            <p>حافظ علي بدي سيارتك من طقات الحصي والصخر المتتطاير علي الطريق حيث تعمل افلام الحماية علي حفظ بدي السيارة
-              والمحافظة علي صبغ الوكالة </p>
-            <p>مع حصية المعالجة الذاتية ترجع الحماية الي حالته الطبيعية مرة اخري بفضل الحرارة </p>
+            <p>حافظ على بدي سيارتك من ضربات الحصي والصخر المتتطاير على الطريق حيث تعمل افلام الحماية على حفظ بدي السيارة
+              والمحافظة على صبغ الوكالة </p>
+            <p>مع حصية المعالجة الذاتية ترجع الحماية الي حالتها الطبيعية مرة اخري بفضل الحرارة </p>
           </div>
           <div class="juxtapose">
-            <img src="./img/protication/ppf-before.webp" data-label="قبل ازالة الحماية" alt="hot" />
-            <img src="./img/protication/ppf-after.webp" data-label="بعد ازالة الحماية" alt="could" />
+            <img src="./img/protication/ppf-before.webp" data-label="قبل ازالة الحماية"
+              alt="افضل حماية المانية بالكويت استثمار مقابل قيمة" />
+            <img src="./img/protication/ppf-after.webp" data-label="بعد ازالة الحماية"
+              alt="اقوي حماية المانية بالكويت استثمارمقابل قيمة" />
           </div>
         </div>
       </div>
@@ -112,14 +113,14 @@
         <div class="container">
           <div class="box platinum">
             <div class="img-holder">
-              <img src="./img/protication/lam3a-1.jpg" alt="platinum" />
+              <img src="./img/protication/lam3a-1.jpg" alt="مع حمايات هافركامب افضل حمايات في الكويت" />
             </div>
             <h2>شفاف</h2>
             <p>حماية شفافة مع لمعة اضافية تصل الى 70% على لمعة السيارة الاصلية</p>
           </div>
           <div class="box time gold">
             <div class="img-holder">
-              <img src="./img/protication/mate.png" alt="" />
+              <img src="./img/protication/mate.png" alt="مع حمايات هافركامب المطفية اضف لمسة عصرية الي سيارتك" />
             </div>
             <h2>مطفية</h2>
             <p>
@@ -129,7 +130,7 @@
           </div>
           <div class="box passion silver">
             <div class="img-holder">
-              <img src="./img/protication/color.jpg" alt="" />
+              <img src="./img/protication/color.jpg" alt="محموعة متنوعة من حمايات تغير اللون " />
             </div>
             <h2>تغير لون</h2>
             <p>
@@ -145,11 +146,11 @@
     <section class="ppf-type" id="ppf-type">
       <div class="center-text">
         <h2 class="heading-secondary">
-          تعرف علي انواع الحمايات المتوفرة لدينا </h2>
+          تعرف على انواع الحمايات المتوفرة لدينا </h2>
       </div>
       <div class="container">
         <div class="box">
-          <img src="./img/protication/haverkamp.png" alt="haverkamp" />
+          <img src="./img/protication/haverkamp.png" alt="اقوي حماية المانية بالكويت" />
           <div class="content">
             <h3>هافركامب</h3>
             <p>حماية المانية</p>
@@ -160,7 +161,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="./img/protication/clif-logo.jpg" alt="clif" />
+          <img src="./img/protication/clif-logo.jpg" alt="اقوي حماية كورية بالكويت" />
           <div class="content">
             <h3>كلايف ديزاين</h3>
             <p>حماية كورية</p>
@@ -171,7 +172,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="./img/protication/iron.png" alt="iron shield" />
+          <img src="./img/protication/iron.png" alt="افضل حماية امريكية بالكويت" />
           <div class="content">
             <h3> ايرون شيلد</h3>
             <p>حماية امريكية</p>
@@ -193,22 +194,22 @@
       <div class="carosel">
         <div class=" list">
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-1.png" alt="football">
+            <img src="./img/gallery/main/ppf-gal-1.png" alt="اقوي حماية المانية بالكويت كفالة 10 سنوات ">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-2.png" alt=" handball ">
+            <img src="./img/gallery/main/ppf-gal-2.png" alt="اقوي حماية كورية بالكويت كفالة 10 سنوات ">
           </div>
           <div class="item">
-            <img src="../img/gallery/main/ppf-gal-3.png" alt="basketball">
+            <img src="../img/gallery/main/ppf-gal-3.png" alt="اقوي حماية امريكية بالكويت كفالة 10 سنوات ">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-4.png" alt="volleyball">
+            <img src="./img/gallery/main/ppf-gal-4.png" alt="افضل حماية المانية بالكويت كفالة 10 سنوات ">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-5.png" alt="tennis">
+            <img src="./img/gallery/main/ppf-gal-5.png" alt="افضل حماية كورية بالكويت كفالة 10 سنوات ">
           </div>
           <div class="item">
-            <img src="./img/gallery/main/ppf-gal-6.png" alt="swimming">
+            <img src="./img/gallery/main/ppf-gal-6.png" alt="افضل حماية امريكية بالكويت كفالة 10 سنوات ">
           </div>
 
         </div>
@@ -395,7 +396,9 @@
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      سمك الحماية 9 ميكروميلى
+                      سمك حماية هافركامب الالمانية 9.5 ميكروميلى<br />
+                      سمك حماية كلايف ديزاين الكورية 9.5 ميكروميلى <br />
+                      سمك حماية ايرون شيلد الامريكية 8.7 ميكروميلى
                     </div>
                   </div>
                 </div>
@@ -409,7 +412,7 @@
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      10 سنوات علي عيوب التركيب
+                      10 سنوات على عيوب التركيب
                     </div>
                   </div>
                 </div>
@@ -437,7 +440,7 @@
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      تحتوي الحماية علي خاصية المعالجة الذاتية عن طريق تعريضها الي الحرارة
+                      تحتوي الحماية على خاصية المعالجة الذاتية عن طريق تعريضها الي الحرارة
                     </div>
                   </div>
                 </div>
@@ -465,7 +468,7 @@
                   <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      نعم يوجد سيرفس دوري لفحص الحماية كل 6 اشهور مجانا
+                      نعم يوجد سيرفس دوري لفحص الحماية كل 6 اشهر مجانا
                     </div>
                   </div>
                 </div>
@@ -485,7 +488,9 @@
             <p class="cta-text">
               نقدم لكم أفضل حماية للسيارات باستخدام أحدث التقنيات والمواد عالية الجودة</p>
 
-            <form class="cta-form" name="sign-up" netlify>
+            <form class="cta-form" name="sign-up" action="https://formsubmit.co/ef7d656274c363dc9eb3ce5c5ff03525"
+              method="post">
+              <input type="hidden" name="_captcha" value="false">
               <div>
                 <label for="full-name">الاسم بالكامل </label>
                 <input id="full-name" type="text" placeholder=" من فضلك اكتب اسمك" name="full-name" required />
